# drone_mapper2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
configs/: simulation_compositions.yaml  smoke_composition.yaml
configs/drone_configs/: drone_large.yaml  drone_small.yaml
configs/error_case_configs/: README.md  mission_normal.yaml  mission_small_bounds.yaml  sim_good.yaml  sim_start_in_obstacle.yaml  sim_start_outside_bounds.yaml  sim_start_outside_map.yaml  start_validation_compositions.yaml
configs/lidar_configs/: lidar_a.yaml  lidar_b.yaml
configs/mission_configs/: benchmark_explore.yaml  mission_a.yaml
configs/sim_configs/: benchmark.yaml  sim_a.yaml
data_maps/: room_pillars_9x9x4.npy
docs/: FORUM_CLARIFICATIONS2.md  HLD.md  maps_comparison_docs.md
include/drone_mapper/drone/: DroneControlImpl.h  MappingAlgorithmImpl.h
include/drone_mapper/map/: IMutableMap3D.h  Map3DImpl.h
include/drone_mapper/mission/: MissionControlImpl.h
include/drone_mapper/mocks/: ILidar.h  MockGPS.h  MockLidar.h  MockMovement.h
inputs/: sim_compose.yaml
inputs/mission/: house_mission_full.yaml  house_mission_full_raw_map.yaml
inputs/simulation/: house_simulation.yaml  house_simulation_full_raw_map.yaml  large_simulation_out.yaml  large_simulation_room.yaml  small_simulation_out.yaml  small_simulation_room.yaml
out1/: simulation_output.yaml
out1/output_results/: benchmark_map_run0_output.npy  benchmark_map_run1_output.npy  benchmark_map_run2_output.npy  benchmark_map_run3_output.npy
src/: drone_mapper_simulation_main.cpp  maps_comparison_main.cpp
src/drone/: DroneControlImpl.cpp  MappingAlgorithmImpl.cpp
src/map/: Map3DImpl.cpp
src/mission/: MissionControlImpl.cpp
src/mocks/: MockGPS.cpp  MockLidar.cpp  MockMovement.cpp
src/simulation/: SimulationManager.cpp  SimulationRunFactoryImpl.cpp  SimulationRunImpl.cpp
src/utils/: ErrorLogger.cpp  MapsComparison.cpp  ScanResultToVoxels.cpp  SimulationReportWriter.cpp  YamlConfigParser.cpp
tests/components/: drone_control_test.cpp  error_logger_test.cpp  map3d_test.cpp  mapping_algorithm_test.cpp  maps_comparison_test.cpp  mission_control_test.cpp  mock_gps_movement_test.cpp  mock_lidar_test.cpp  scan_result_to_voxels_test.cpp  simulation_manager_test.cpp  simulation_report_writer_test.cpp  simulation_run_test.cpp  yaml_config_parser_test.cpp
tests/fixtures/: SimulationRunFixture.h
tests/integration/: integration_support.h  integration_test.cpp  mock_algorithm_integration_test.cpp
tests/mocks/: MockIDroneControl.h  MockIDroneMovement.h  MockIGPS.h  MockILidar.h  MockIMap3D.h  MockIMappingAlgorithm.h  MockIMissionControl.h  MockIMutableMap3D.h  MockISimulationRun.h  MockISimulationRunFactory.h
(+12 files in other folders)
